--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -6,14 +6,13 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2 # You can try with @v4 if you prefer
 
       - name: Install dependencies
         run: npm ci
 
       - name: Run Cypress tests
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v2 # Ensure this is the latest version
         with:
           record: true
         env:
